--- a/21.md
+++ b/21.md
@@ -76,7 +76,7 @@ Today I meet my dear [Mrs-N](1000001002.md) again to finally get back all my Dri
 
 During [My-MPA-Process](1000001000.md) I always had the [Feeling](60041.md), that our [German-System](8000998.md) does provide *real* [Justage](670035.md) and when I earlier saw the two Flags from [Israel](140000067.md) and [Germany](140000025.md) in front of the [Landrats-Amt](250010001.md), I was reminded to that again:
 
-![Only Two?](400000160.jpg)
+![Why only Two?](400000160.jpg)
 
 I can understand that also the [Family](180000008.md) of [Our-Mayor](70000069.md) probably had to endure great [Suffering](10000111.md) due to [Crimes](670012.md) of the [National-Socialism](141000012.md), but can this *really* still be a [Justification](600178.md) for this (at least for militant [Islamists](1200000004.md)) possible [Provocation](41010010.md) in [Tübingen](2000001.md)?
 
