--- a/21.md
+++ b/21.md
@@ -88,9 +88,9 @@ Howsoever, there are probably even more important [Problems](600029.md), like [G
 
 ![Last Payment?](400000163.jpg)
 
-In Order to save [Money](6666.md) and [Time](10000002.md) for future Candidates, I then discuss one of my [Ideas](600012.md), where the Son of [Mrs-N](1000001002.md) might help for a little [Problem](600029.md) with his refurbished [Motor-Bike](200500003.md) from [Suzuki](240000025.md):
+In Order to save [Money](6666.md) and [Time](10000002.md) for future Candidates, I then discuss one of my [Ideas](600012.md), where the Son of [Mrs-N](1000001002.md) might help with his refurbished [Motor-Bike](200500003.md) from [Suzuki](240000025.md):
 
-![Cheap Machine?](400000161.jpg)
+![Similar Machine?](400000161.jpg)
 
 Arrived at Home I proudly present our glory [Solution](600024.md) to my [My-Dangerous-Occupant](88.md) and get into the next [Battle](1200000007.md), because she is a *real* [Warrior](1200000005.md) against [Combustion-Engines](200400008.md), but perhaps we can get [Cease-Fire](1200000008.md) by using [Electric-Motor-Bikes](200500006.md):
 
