--- a/21.md
+++ b/21.md
@@ -82,7 +82,7 @@ I can understand that also the [Family](180000008.md) of [Our-Mayor](70000069.md
 
 Well, since we don't have the [Tagblatt](2010040.md), I frankly admit my [Ignorance](600186.md) about the *real* [Facts](600181.md) behind this [Decision](60095.md) and perhaps my possible wrong [Statement](600078.md) might just be a [Provocation](41010010.md) to get some [Publicity](60175.md), like our [Mr-Palmer](70000069.md) also does it from Time to Time.
 
-In General I get most "Outside"-[Information](60007.md) from [Friends](180000002.md), like for Example from my [Contenance-Trainer](1971091169.md), to whom (with all Respect) I have more [Confidence](60015.md), than for Example to wordy [Psychologists](202000014.md) or [Jurists](670036.md), who get a big [Stage](60010007.md) from our beloved [Public-Service-Broadcasters](191000003.md).
+In General I get most "Outside"-[Information](60007.md) from [Friends](180000002.md), like for Example from my decided [Contenance-Trainer](1971091169.md), to whom (with all Respect) I have more [Confidence](60015.md), than for Example to wordy [Psychologists](202000014.md) or [Jurists](670036.md), who get a big [Stage](60010007.md) from our beloved [Public-Service-Broadcasters](191000003.md).
 
 Howsoever, there are probably even more important [Problems](600029.md), like [Global-Warming](290000002.md) or [Refugees](141000013.md) and for me at the Moment most [Relevance](600114.md) has the Settlement of yet another [MPA](1000001001.md)-[Bill](130000002.md):
 
