--- a/21.md
+++ b/21.md
@@ -72,7 +72,7 @@
 #### Blog-Chain-Time 2023.11.02-14:00 at the Landrats-Amt  <a id="17002"/>
 ###### Topics: MPA, Justice, Politics, War, Peace
 
-Today I meet my dear [Mrs-N](1000001002.md) again to finally get back all my Driving-[Rights](670004.md) from the [Our-Landrats-Amt](140100002.md). In the Office I also meet her [Boss](180000013.md), with whom I already had a "friendly" [Conversation](40202001.md) right at the [Beginning](60154.md) of my personal [Battle](1200000007.md) with the [Paragraph-Riders](1200000006.md).
+Today I meet my dear [Mrs-N](1000001002.md) again to finally get back all my Driving-[Rights](670004.md) from the [Our-Landrats-Amt](140100002.md). In the Office I also meet her [Boss](180000013.md), with whom I already had a "friendly" [Conversation](40202001.md) right at the [Beginning](60154.md) of my personal [Battle](1200000007.md) [[1]](#17051) with the [Paragraph-Riders](1200000006.md).
 
 During [My-MPA-Process](1000001000.md) I always had the [Feeling](60041.md), that our [German-System](8000998.md) does *not* provide *real* [Justage](670035.md) and when I earlier saw the two Flags from [Israel](140000067.md) and [Germany](140000025.md) in front of the [Landrats-Amt](250010001.md), I was reminded to that again:
 
@@ -126,7 +126,8 @@ Howsoever, at least for me this [Nightmare](404.md) seems to be finally over now
 
 ### Footnotes
 
-[<a id="17050"/>0] Beweismittel abgelehnt: [https://holzheu.de](https://www.holzheu.de/meine-erste-mpu-beweismittel-abgelehnt)
+[<a id="17050"/>0] Beweismittel abgelehnt: [https://holzheu.de](https://www.holzheu.de/meine-erste-mpu-beweismittel-abgelehnt) \
+[<a id="17050"/>1] Meine erste MPU: [https://holzheu.de](https://www.holzheu.de/category/recht/mpu)
 
 ## Day-115: Men-Women-Universe <a id="15000"/>
 
