Don't take myself not too seriously

--- a/21.md
+++ b/21.md
@@ -74,7 +74,7 @@
 
 Today I meet my dear [Mrs-N](1000001002.md) again to finally get back all my Driving-[Rights](670004.md) from [Our-Landrats-Amt](140100002.md). In the Office I also meet her [Boss](180000013.md), with whom I already had a "friendly" [Conversation](40202001.md) right at the [Beginning](60154.md) of my personal [Battle](1200000007.md) [[1]](#17051) with the [Paragraph-Riders](1200000006.md).
 
-During [My-MPA-Process](1000001000.md) I got the [Impression](60041.md), that [Our-System](8000998.md) is *not* good for [All](600017.md) and when I earlier saw in front of the [Landrats-Amt](250010001.md) only the two [Flags](141000009.md) from [Israel](140000067.md) and [Germany](140000025.md), I was reminded to that again:
+The [Impression](60041.md), that [Our-System](8000998.md) is *not* good for [All](600017.md), was confirmed again, when I saw only the two [Flags](141000009.md) from [Israel](140000067.md) and [Germany](140000025.md) in front of the [Landrats-Amt](250010001.md):
 
 ![Fair for All?](400000160.jpg)
 
