--- a/21.md
+++ b/21.md
@@ -78,7 +78,7 @@ My [Impression](60041.md), that [Our-System](8000998.md) is *not* good for [All]
 
 ![Fair for All?](400000160.jpg)
 
-I can understand that also the [Family](180000008.md) of [Our-Mayor](70000069.md) probably had to endure great [Suffering](10000111.md) due to [Crimes](670012.md) of the [National-Socialism](141000012.md), but can this *still* be a [Justification](600178.md) for this (at least for militant [Islamists](1200000004.md)) possible [Provocation](41010010.md) in [Tübingen](2000001.md)?
+I can understand that also the [Family](180000008.md) of [Our-Mayor](70000069.md) probably had to endure great [Suffering](10000111.md) due to [Crimes](670012.md) of the [National-Socialism](141000012.md), but can this *still* be a [Justification](600178.md) for this (at least for militant [Islamists](1200000004.md)) annoying [Provocation](41010010.md) in [Tübingen](2000001.md)?
 
 Well, since we don't have the [Tagblatt](2010040.md), I frankly admit my [Ignorance](600186.md) about the *real* [Facts](600181.md) behind this [Decision](60095.md) and perhaps my possible wrong [Statement](600078.md) might just be a [Provocation](41010010.md) to get some [Publicity](60175.md), like our [Mr-Palmer](70000069.md) also does it from Time to Time.
 
