--- a/21.md
+++ b/21.md
@@ -95,7 +95,7 @@ In Order to save [Money](6666.md) and [Time](10000002.md) for future Candidates,
 After a wordy [Whats-App](9000047.md)-[Disupte](600185.md) with two female [Friends](180000002.md) about Right and Wrong, back at Home I proudly present our glory [Solution](600024.md) to my [My-Skeptical-Occupant](88.md) and get into the next [Battle](1200000007.md), because she is a *real* [Fighter](1200000005.md) against [Combustion-Engines](200400008.md)&nbsp;-&nbsp;but perhaps we can get [Cease-Fire](1200000008.md) by using [Electric-Motor-Bikes](200500006.md):
 
 ![](400000162.jpg)
-![Trotzdem "Schen, dass di gibt!"](400000164.mp3)
+![Trotzdem "Schen, dass eich gibt!"](400000164.mp3)
 
 #### Blog-Chain-Time 2023.10.26-11:30 at the Fahrschule-Armbruster  <a id="17001"/>
 ###### Topics: 123-Friends, MPA, Feelings
