--- a/21.md
+++ b/21.md
@@ -74,7 +74,7 @@
 
 Today I meet my dear [Mrs-N](1000001002.md) again to finally get back all my Driving-[Rights](670004.md) from [Our-Landrats-Amt](140100002.md). In the Office I also meet her [Boss](180000013.md), with whom I already had a "friendly" [Conversation](40202001.md) right at the [Beginning](60154.md) of my personal [Battle](1200000007.md) [[1]](#17051) with the [Paragraph-Riders](1200000006.md).
 
-My [Impression](60041.md), that [Our-System](8000998.md) is *not* fair to [All](600017.md), was confirmed again, when I arrived with [My-Bulli](1971091102.md) at the [Landrats-Amt](250010001.md), where only one [Flag](141000009.md) was waving next to [Germany](140000025.md):
+My [Impression](60041.md), that [Our-Strict-System](8000998.md) is *not* always fair to [Outsiders](180000014.md), was confirmed again, when I arrived with [My-Bulli](1971091102.md) at the [Landrats-Amt](250010001.md), where only one [Flag](141000009.md) was waving next to [Germany](140000025.md):
 
 ![Equal Rights?](400000160.jpg)
 
