--- a/21.md
+++ b/21.md
@@ -82,7 +82,7 @@ I can understand that also the [Family](180000008.md) of [Our-Mayor](70000069.md
 
 Well, since we don't have the [Tagblatt](2010040.md), I frankly admit my [Ignorance](600186.md) about the *real* [Facts](600181.md) behind this [Decision](60095.md) and my (almost for sure) wrong [Statement](600078.md) about the *responsible* [Person](40000001.md) was just a little [Trick](600187.md) for getting more [Publicity](60175.md), like [Master-Palmer](70000069.md) himself demonstrates it from Time to Time.
 
-In General I get most political [Information](60007.md) from [Friends](180000002.md), like my decided [Contenance-Trainer](1971091169.md), to whom I have more [Confidence](60015.md), than to an (with all Respect) uninformed [Psychologist](202000014.md) or an eloquent [Jurist](670036.md), who gets a big [Stage](60010007.md) from our trustworthy [Public-Service-Broadcasters](191000003.md).
+To be honest, in General I get most political [Information](60007.md) from [Colleagues](180000010.md), like my decided [Contenance-Trainer](1971091169.md), to whom I have at least more [Confidence](60015.md), than to eloquent [Jurists](670036.md), who (like he told me) get a big [Stage](60010007.md) from our so trustworthy [Public-Service-Broadcasters](191000003.md).
 
 Howsoever, there are probably even more important [Problems](600029.md), like [Global-Warming](290000002.md) or [Refugees](141000013.md) and for me at the Moment most [Relevance](600114.md) has the Settlement of yet another [MPA](1000001001.md)-[Bill](130000002.md):
 
