--- a/21.md
+++ b/21.md
@@ -84,7 +84,7 @@ Well, since we don't have the [Tagblatt](2010040.md), I frankly admit my [Ignora
 
 To be honest, in General I get most political [Information](60007.md) from [Colleagues](180000010.md), like my decided [Contenance-Trainer](1971091169.md), to whom I have at least more [Confidence](60015.md), than to eloquent [Jurists](670036.md), who (like he told me) get a big [Stage](60010007.md) from our so trustworthy [Public-Service-Broadcasters](191000003.md).
 
-Howsoever, there are probably even more important [Problems](600029.md), like [Global-Warming](290000002.md) or [Refugee](141000013.md)-[Waves](60156.md) and for me at the Moment most [Relevance](600114.md) has the Settlement of yet another [MPA](1000001001.md)-[Bill](130000002.md):
+Howsoever, there are probably even more important [Problems](600029.md), like [Global-Warming](290000002.md) or [Waves](60156.md)&nbsp...&nbspof [Refugees](141000013.md) and for me at the Moment most [Relevance](600114.md) has the Settlement of yet another [MPA](1000001001.md)-[Bill](130000002.md):
 
 ![Last Payment?](400000163.jpg)
 
