--- a/21.md
+++ b/21.md
@@ -76,7 +76,7 @@ Today I meet my dear [Mrs-N](1000001002.md) again to finally get back all my Dri
 
 My [Impression](60041.md), that [Our-Strict-System](8000998.md) is *not* always fair to [Outsiders](180000014.md), was confirmed again some Minutes before, when I arrived with [My-Bulli](1971091102.md) and only one [Flag](141000009.md) was waving next to [Germany](140000025.md) in front of the [Landrats-Amt](250010001.md):
 
-![Equal Rights?](400000160.jpg)
+![Equal Rights for All?](400000160.jpg)
 
 I can understand that also the [Family](180000008.md) of [Our-Mayor](70000069.md) might had to endure great [Suffering](10000111.md) due to [Crimes](670012.md) of the [National-Socialism](141000012.md), but can this *still* be a [Justification](600178.md) for this (at least for [Islamists](1200000004.md)) annoying [Provocation](41010010.md) in the multicultural [Tübingen](2000001.md)?
 
