--- a/21.md
+++ b/21.md
@@ -80,7 +80,7 @@ My [Impression](60041.md), that [Our-Strict-System](8000998.md) is *not* always 
 
 I can understand that also the [Family](180000008.md) of [Our-Mayor](70000069.md) might had to endure great [Suffering](10000111.md) due to [Crimes](670012.md) of the [National-Socialism](141000012.md), but can this *still* be a [Justification](600178.md) for this (at least for [Islamists](1200000004.md)) annoying [Provocation](41010010.md) in the multicultural [Tübingen](2000001.md)?
 
-Well, since we don't have the [Tagblatt](2010040.md), I frankly admit my [Ignorance](600186.md) about the *real* [Facts](600181.md) behind this [Decision](60095.md) and the (almost for sure) wrong [Statement](600078.md) about the *responsible* [Person](40000001.md) was just a simple [Trick](600187.md) for getting more [Publicity](60175.md), like [Master-Palmer](70000069.md) himself demonstrates it from Time to Time.
+Well, since we don't have the [Tagblatt](2010040.md), I frankly admit my [Ignorance](600186.md) about the *real* [Facts](600181.md) behind this [Decision](60095.md) and the [Provocation](600078.md) of the (almost for sure) not *responsible* [Person](40000001.md) was just a simple [Trick](600187.md) for getting more [Publicity](60175.md), like [Master-Palmer](70000069.md) himself demonstrates it from Time to Time.
 
 To be honest, in General I get most political [Information](60007.md) from [Colleagues](180000010.md), like my decided [Contenance-Trainer](1971091169.md), to whom I have at least more [Confidence](60015.md), than to eloquent [Jurists](670036.md), who (like he told me) get a big [Stage](60010007.md) from our so trustworthy [Public-Service-Broadcasters](191000003.md).
 
