Use better Word

--- a/21.md
+++ b/21.md
@@ -343,7 +343,7 @@ Unfortunately I know neither One nor the Other, so I have to rely on Myself and 
 
 ![Speed-Limit in Dusslingen](400000099.jpg)
 
-Fortunately my Tester generously forgives my [Speeding-Misdemeanor](670030.md), but the [Joy](10000055.md) about that does not last very long, because Seconds later my Brain completely looses [Focus](60143.md):
+Fortunately my Tester generously forgives my [Speeding-Misdemeanor](670030.md), but the [Joy](10000055.md) about that does not last very long, because Seconds later my Gaze completely looses [Focus](60143.md):
 
 ![Left-for-Right in Dusslingen](400000103.jpg)
 
