--- a/21.md
+++ b/21.md
@@ -514,7 +514,7 @@ Afterwards we are invited by [our](70000034.md) European-Champion to a really re
 
 Somehow still in Thoughts, I then forget half of the [Work](60036.md), when smoothing the [Tennis-Court](270000018.md):
 
-![My incomplete Work](400000032.jpg)
+![Incomplete Work](400000032.jpg)
 
 ## Day-95: Tennis-Supports and Land-Restoration <a id="9500"/>
 
