--- a/21.md
+++ b/21.md
@@ -529,7 +529,7 @@ Fourtunately [H.O](70000032.md) is there, who at the Moment gives Tennis-Lessons
 
 Because we shoot a Ball outside the Court, after the Match I had to enter the Construction-Site, where currently [Land-Restoration](260030002.md) is done for the [Neckar](140000048.md):
 
-![Renaturation of the Neckar](400000030.jpg)
+![Neckar Renaturation](400000030.jpg)
 
 ## Day-91: Freiburg Concert <a id="9100"/>
 
