--- a/21.md
+++ b/21.md
@@ -572,7 +572,7 @@ Style is important, no Question, but first of all probably a little bit more [Tr
 
 After I came back from Stuttgart [Yesterday](#8900), I left [My-Bicycle](1971091105.md) at the Train-Station and Today on my Way to a [Tennis-Match](270000012.md) with my Tenor-Colleague I want to pick it up again. When I arrive at my Baby, I realize that Someone has stolen my Tools:
 
-![Tools Thievery](400000022.jpg)
+![Fair Thievery?](400000022.jpg)
 
 Assuming that my World is a bit worse now and for the Person, who commited the [Thievery](670013.md), the World is a bit better, regarding [my](#7001) recent Definition of [Moral](645003.md) the global Result is equal - nevertheless it feels somehow wrong.
 
