--- a/21.md
+++ b/21.md
@@ -595,7 +595,7 @@ The same as my [Father](40000007.md), who at least would have enjoyed the really
 
 Today is my first Day I feel better, so I visited [Nicole](1997080300.md) in Stuttgart again, where we bought a [Playstation](201000006.md)-5 for also playing Computer-Games with her Son:
 
-![Playstation for the Family](400000020.jpg)
+![Fun for Family](400000020.jpg)
 
 ## Day-79: MPA in Köln  <a id="7900"/>
 
