--- a/21.md
+++ b/21.md
@@ -845,7 +845,7 @@ Made a [new](11091971.md#10007) Appointment for my 5th [MPU](1000001001.md) in a
 
 I smoked the last Cigarette from my [Smoking-Box](100100004.md) of Red-[Gauloises](100200001.md) and decided that this is my last one for the Time being:
 
-![One last Cigarette](400000026.jpg)
+![Last Cigarette](400000026.jpg)
 
 I feel somehow sad, but but I don't know the real [Reason](600030.md) for that.
 
@@ -926,7 +926,7 @@ My Train made an unplanned Stop in [Bad-Cannstadt](140000041.md) and arrived wit
 
 At the Bus-Station I recognize some common German [Flowers](260020000.md), namely the [Scharfer Hahnenfuß](260020002.md) and the [Gewöhnlicher Löwenzahn](260020003.md), that already transformed into a [Pusteblume](260030005.md):
 
-![Young Dandelions & Blow-Balls](400000044.jpg)
+![Dandelions and Blow-Balls](400000044.jpg)
 
 #### Blog-Chain-Time 2023.05.03-08:02 in Tübingen <a id="4001"/>
 ###### Topics: GFR, Deutschland-Ticket, MPA
@@ -1468,7 +1468,7 @@ Sounds good, but is that [The-Truth](600140.md)?
 
 Smoked three last Cigarettes that makes then almost one Package Today:
 
-![Last Cigarette for Today](50000061.jpg)
+![Last Cigarette](50000061.jpg)
 
 #### Blog-Chain-Time 2023.04.12-04:2O in Tübingen <a id="1806"/>
 ###### Topics: Smoking
@@ -1568,7 +1568,7 @@ Finished watching the Titanic-1997-Movie with my House-Mate.
 #### Connections in Progress <a id="1617"/>
 ###### Topics: Connection
 
-![Connected](50000060.jpg)
+![Feel Connected](50000060.jpg)
 
 ## Day-15: Rendering 1 <a id="1500"/>
 
@@ -1615,7 +1615,7 @@ The [Hefe-Weizen](203000001.md) creates a lot of [Pressure](10000008.md) in my [
 
 I try to explain our current [Money-System](130000003.md):
 
-![Interest-Problem Expained](400000038.jpg)
+![Interest-Problem](400000038.jpg)
 
 #### Blog-Chain-Time 2023.04.08-00:00 on my Way to the S-Bahn <a id="1406"/>
 ###### Topics: Geography, Profession
