--- a/21.md
+++ b/21.md
@@ -508,7 +508,7 @@ After the Tennis-Training I escort my [My-Fellow-Occupant](88.md) to the "Kopfsc
 
 After a lot of Time on learning the [Top-Spin](270000022.md), Today we finally get acquainted with the [Slice](270000021.md):
 
-![Tennis Back-Spin Training](400000031.mp4)
+![Back-Spin Training](400000031.mp4)
 
 Afterwards we are invited by [our](70000034.md) European-Champion to a really relaxing Coffee-Break, where I sopontaneously sing together with my [Training-Partner](1971091141.md) a little Duett of [Gute-Nacht-Freunde](90100005.md) from [Reinhard_Mey](70000035.md), that IMHO already sounded quite nice.
 
