--- a/21.md
+++ b/21.md
@@ -404,7 +404,7 @@ My dear [Artist-Friend](1971091155.md) will probably soon move back to his old A
 
 At first I am not too keen on the Action, but after we arrived at the [Kaufland](2010027.md) and I see the big Waste-Mountain in our Shopping-Carts, ...
 
-![Our Waste-Mountain](400000048.jpg)
+![Waste-Mountain](400000048.jpg)
 
 ... suddenly the whole Thing looks more like an Adventure to me. I am curious, how much Money we will get out of this and estimate about 30 Euros for the [Deposit](130000029.md).
 
