--- a/21.md
+++ b/21.md
@@ -449,7 +449,7 @@ Until the middle of the Movie it was extraordinary funny (at least for Adults), 
 
 Nevertheless it was a great Performance of the whole Crew and BTW I can't remember, if I ever saw such a long List of [Stunt-Men](80000007.md) and [Stunt-Women](80000007.md) in my Life:
 
-![Stunt-Performer List](400000042.jpg)
+![Stunt-Performers](400000042.jpg)
 
 #### Blog-Chain-Time 2023.07.17-10:51 in Tübingen <a id="10601"/>
 ###### Topics: Movie, Star-Trek, Star-Wars
