--- a/21.md
+++ b/21.md
@@ -748,7 +748,7 @@ Date/Time Original              : 2019:05:30 13:08:18
 
 In the Train I modified [my](23.md#6301) Face-Detection Program, to blur my Parents in the Picture:
 
-![Nicole with my Parents](400000009.jpg)
+![Nicole with Parents](400000009.jpg)
 
 ## Day-64: Fast and Furious<a id="6400"/>
 
