--- a/21.md
+++ b/21.md
@@ -1575,7 +1575,7 @@ Finished watching the Titanic-1997-Movie with my House-Mate.
 #### Blog-Chain-Time 2023.04.08 <a id="1501"/>
 ###### Topics: Movie-from-Michael
 
-During this Work-Day I was reminded once of a Vacation with Nicole [[0]](#1730), One more Time ...
+During this Work-Day I was reminded once of a Vacation with Nicole [[0]](#1730)&nbsp;-&nbsp;One more Time ...
 
 #### Blog-Chain-Time 2023.04.09-01:21 in Tübingen <a id="1502"/>
 ###### Topics: Photo-from-Michael
