--- a/21.md
+++ b/21.md
@@ -447,7 +447,7 @@ The Special-Effects are really impressive and the [CGI](2000217.md) looks almost
 
 Until the middle of the Movie it was extraordinary funny (at least for Adults), but then it gets more serious, which comes a bit suprisingly and IMHO "somehow" does not fit.
 
-Nevertheless it was a great Performance of the whole Crew and BTW I can't remember, if I ever saw such a long List of [Stunt-Men](80000007.md) and [Stunt-Women](80000007.md) in my Life:
+Nevertheless it was a great Performance of the whole Crew and BTW I can't remember, if I ever saw such a long List of [Stunt-Men](80000007.md) and [Stunt-Women](80000007.md):
 
 ![Stunt-Performers](400000042.jpg)
 
