Improve Text and add References

--- a/21.md
+++ b/21.md
@@ -650,9 +650,9 @@ I have a longer Telephone-Call with my Friend Stefan about his Experiences with 
 #### Blog-Chain-Time 2023.06.07-14:00 in Tübingen <a id="7401"/>
 ###### Topics: MPA
 
-Next Monday I have my [MPA](1000001001.md) and therefore I ponder since several Days about what I should say there. It makes me really depressive, because I feel powerless against the System and the [Psychologists](202000014.md).
+Next Monday I have my [MPA](1000001001.md) and therefore I ponder since several Days about what I should say there, which makes me really *depressive*, because I feel powerless against the System with its [Psychologists](202000014.md).
 
-This Evening I will call am Man, who already made five successful MPAs and hope that he can give me some Tips, how to be successful this time.
+This Evening I will call a [Colleague](180000010.md), who already made five successful MPAs and hope that he can give me some [Tips](600168.md), how to be successful this Time.
 
 ## Day-72: Back to the Future <a id="7200"/>
 
