--- a/21.md
+++ b/21.md
@@ -663,7 +663,9 @@ In the Night I watch together with my dear Friend "Sarah" and my beloved [House-
 
 I always identfied myself a little bit with the Main-Actor [Michael_J_Fox](70000025.md), who unfortunately suffers under [Parkinson](48000014.md) since a long Time.
 
-And of course I love the crazy Scientist "Doc Brown" played by [Christopher_Loyed](70000026.md) and admire [Crispin_Glover](50000028.md) for his brilliant Acting-Performance, when impersonating the shy Looser-Type "George McFly".
+And of course I love the crazy Scientist "Doc Brown" played by [Christopher_Loyed](70000026.md) and admire [Crispin_Glover](50000028.md) for his brilliant Acting-Performance, when impersonating the shy "George McFly", where the [Name](60048.md) reminds me to [My-Father](1971091171.md), who also wears [Suspenders](204000007.md):
+
+![Father Suspenders](400000166.jpg)
 
 Last but not least I would like to mention the Sound-Track with the great Song [The-Power-of-Love](90100003.md) from [Huey_Lewis](70000027.md).
 
