--- a/203500004.md
+++ b/203500004.md
@@ -1,3 +1,3 @@
-# Chicken-Chilli
+# Chilli-Chicken
 
-Chicken-Chilli is a [Meal](203500000.md) from [India](140000064.md).
+Chilli-Chicken is a [Meal](203500000.md) from [India](140000064.md).
