--- a/21.md
+++ b/21.md
@@ -1059,7 +1059,9 @@ In front of the Bus-Station I meet two working Men and then lost a [Bet](2700000
 #### Blog-Chain-Time 2023.04.26-19:09 in the Delhi-Palace <a id="3304"/>
 ###### Topics: Delhi-Palace, Chilli-Chicken, Nepal
 
-After Tennis I visit the [Delhi-Palace](18071962.md) and order my favourite [Meal](203500000.md) Chilli-Chicken with two tasty [Hefe-Weizen](203000001.md) for a total of 24 Euro.
+After Tennis I visit the [Delhi-Palace](18071962.md) and order for a total of 24 Euro two tasty [Hefe-Weizen](203000001.md) together with my favourite [Dish](203500000.md), namely [Chilli-Chicken](203500004.md):
+
+![Spicy and Good!](400000167.jpg)
 
 While eating I have a very intensive Talk with the Man-of-Asha about [AI-Systems](9000152.md) and afterwards I briefly meet a young Woman from [Nepal](140000036.md).
 
