--- a/21.md
+++ b/21.md
@@ -1003,7 +1003,7 @@ I liked this Season because of the really great [Special-Effects](200300008.md) 
 
 And of course the Best is, that almost all [Star-Trek-NG](200350100.md) Heroes have been on Board again, e.g. besides of [Captain_Picard](200030105.md) my Favorites have been [Seven-of-Nine](200030106.md), [Worf](200030108.md) and of course the [Geordi_La_Forge](200030109.md) and his [Android](200400004.md)-Friend [Data](200030110.md).
 
-IMHO all of them are even better than in their younger Days, especially [Michael_Dorn](70000017.md), the [Actor](202000010.md) of [Worf]200030108.md) made a huge Step forward.
+IMHO all of them are even better than in their younger Days, especially [Michael_Dorn](70000017.md), the [Actor](202000010.md) of [Worf](200030108.md) made a huge Step forward.
 
 #### Blog-Chain-Time 2023.04.29-01:3O on a Smoking-Round <a id="3502"/>
 ###### Topics: Smoking
