--- a/21.md
+++ b/21.md
@@ -1013,7 +1013,9 @@ I like the Ukrainian [Winston](100100002.md)-Cigarette, it tastes similar to my 
 #### Blog-Chain-Time 2023.04.28-20:OO on a Shopping-Round <a id="3501"/>
 ###### Topics: Smoking
 
-On the Shopping-Round with my beloved House-Dragon, I meet a Couple from the [Ukraine](140000020.md) and the Man asks me for Fire. After I helped him out, we tried to talk a little bit, but the Conversation was difficult, because they only spoke little English and I never learnt [Ukrainian](666002.md). As Farewell-Present the kind Man hands me over one [Winston](100100002.md)-Cigarette.
+On the Shopping-Round with [My-Beloved-House-Dragon](88.md), I meet a Couple from the [Ukraine](140000020.md) and the Man asks me for Fire. After I helped him out, we tried to talk a little bit, but the Conversation was difficult, because they only spoke little [English](600006.md) and I never learnt [Ukrainian](666002.md). As Farewell-[Present](600189.md) the kind Man hands me over one [Winston](100100002.md)-Cigarette:
+
+![Win-Present](400000168.jpg)
 
 ## Day-34: Wimbledon, House-Dragon and MPA <a id="3400"/>
 
