--- a/1971091172.md
+++ b/1971091172.md
@@ -1,3 +1,3 @@
 # My-Mother
 
-My-Mother is a [Human](40000001.md).
+This Number-File is no longer maintained, [here](1948102000.md) you can find its living Gemini.
