--- a/300060003.md
+++ b/300060003.md
@@ -1,3 +1,3 @@
 # Bike-Troop
 
-A Bike-Troop is a Group of [Motor-Bike](200500003.md)-[Drivers](404.md) on a [Bike-Troop-Area](300060002.md).
+A Bike-Troop is a [Group](180000000.md) of [Motor-Bike-Drivers](1100100006.md) on a [Bike-Troop-Area](300060002.md).
