--- a/300060001.md
+++ b/300060001.md
@@ -1,3 +1,3 @@
 # Bike-Troop-Area-Project
 
-The Bike-Troop-Area-Project is a [Dings-Sub-Project](300000033.md).
+The Bike-Troop-Area-Project is a [Dings-Sub-Project](300000033.md) for the [Realization](600033.md) of [Bike-Troop-Areas](300060002.md).
