--- a/670022.md
+++ b/670022.md
@@ -1,3 +1,3 @@
 # Patent
 
-A Patent is a [Document](700001.md) in the [Jursitics-System](670001.md).
+A Patent is a [Document](700001.md) in a [Juristics-System](670001.md).
