--- a/260100001.md
+++ b/260100001.md
@@ -1,3 +1,3 @@
-# Agriscience-System
+# Agricultures-System
 
-Agriscience-System is a [System](60052.md) for [Agriscience](260100000.md).
+Agricultures-System is a [System](60052.md) for [Agricultures](260100000.md).
