--- a/300060001.md
+++ b/300060001.md
@@ -1,3 +1,17 @@
 # Bike-Troop-Area-Project
 
 The Bike-Troop-Area-Project is a [Dings-Sub-Project](300000033.md) for the [Realization](600033.md) of [Bike-Troop-Areas](300060002.md).
+
+## Problem-Statement
+
+In Areas like [Tübingen](2000001.md) currently there is no good [Option](600183.md) for [Motor-Bike-Drivers](1100100006.md) for making legal [Driving-Lessons](1100000014.md) without [Contracts](670037.md) with [Driving-Schools](1100100003.md).
+
+Because of own [Experiences](600096.md) I identified [Potential](60128.md) to improve the following [Problems]()
+
+### Resource-Usage of Instructors
+
+While I make my Excercises on the [Driving-Training-Ground](1100100004.md) the [Instructors](202000017.md) Sometimes are not required and therefore used the [Idle-Time](600192.md) for [Telephone-Calls](1000020001.md) or [Searching](600091.md) missing [Pylons](1100100007.md) in the [Maize-Field](260100003.md).
+
+So in the Context of Resource-Optimization the free [Resources](60174.md) could be used for Higher-Value-[Tasks](60083.md) like [Teaching]() and [Supervising]().
+
+## Goals
