Rename Bike-Troop-Area-Project -> Bike-Troop-Project

--- a/300060001.md
+++ b/300060001.md
@@ -1,6 +1,6 @@
-# Bike-Troop-Area-Project
+# Bike-Troop-Project
 
-The Bike-Troop-Area-Project is a [Dings-Sub-Project](300000033.md) for the [Realization](600033.md) of [Bike-Troop-Areas](300060002.md).
+The Bike-Troop-Project is a [Dings-Sub-Project](300000033.md) for the [Realization](600033.md) of [Bike-Troop-Areas](300060002.md).
 
 ## Problem-Statement
 
