--- a/300060001.md
+++ b/300060001.md
@@ -4,12 +4,12 @@ The Bike-Troop-Project is a [Dings-Sub-Project](300000033.md) for the [Realizati
 
 ## Problem-Statement
 
-In Areas like [Tübingen](2000001.md) currently there is no good [Option](600183.md) for [Motor-Bike-Drivers](1100100006.md) for making legal [Driving-Lessons](1100000014.md) without [Contracts](670037.md) with [Driving-Schools](1100100003.md).
+In Areas like [Tübingen](2000001.md) currently there is no good [Solution](600024.md) for [Motor-Bike-Drivers](1100100006.md) for making *legal* [Driving-Lessons](1100000014.md) without *expensive* [Contracts](670037.md) with [Driving-Schools](1100100003.md).
 
 Based on own [Experiences](600096.md) I identified [Potential](60128.md) for [Improvement](60135.md) in several Areas.
 
 ### Resource-Optimization of Instructors
 
-While I make my Excercises on the [Driving-Training-Ground](1100100004.md) the [Instructors](202000017.md) Sometimes are not required and therefore used the [Idle-Time](600192.md) for [Telephone-Calls](1000020001.md) or [Searching](600091.md) missing [Pylons](1100100007.md) in the [Maize-Field](260100003.md).
+While I make my Excercises on the [Driving-Training-Ground](1100100004.md) the [Instructors](202000017.md) Sometimes are not required and therefore use their [Idle-Time](600192.md) for [Telephone-Calls](1000020001.md) or [Searching](600091.md) missing [Pylons](1100100007.md) in the [Maize-Field](260100003.md).
 
-So as Resource-Optimization the free [Resources](60174.md) could be used for Higher-Value-[Tasks](60083.md) like [Teaching](600193.md) or [Supervising](600194.md).
+As Resource-Optimization I suggest to use the free [Resources](60174.md) for Higher-Value-Tasks like [Teaching](600193.md) and [Supervising](600194.md), which can be achieved by [Queuing](404.md) of multiple [Students](60087.md).
