--- a/21.md
+++ b/21.md
@@ -78,7 +78,7 @@ My [Impression](60041.md), that [Our-Strict-System](8000998.md) is *not* always 
 
 ![Equal Rights for All?](400000160.jpg)
 
-I can understand that also the [Family](180000008.md) of [Our-Mayor](70000069.md) might had to endure great [Suffering](10000111.md) due to [Crimes](670012.md) of the [National-Socialism](141000012.md), but can this *still* be a [Justification](600178.md) for this superfluous [Provocation](41010010.md) in our multicultural [Tübingen](2000001.md)?
+I can understand that also the [Family](180000008.md) of [Our-Mayor](70000069.md) might had to endure great [Suffering](10000111.md) due to [Crimes](670012.md) of the [National-Socialism](141000012.md), but can this *still* be a [Justification](600178.md) for this superfluous [Provocation](41010010.md) of our arabic [Friends](180000002.md) in our multicultural [Tübingen](2000001.md)?
 
 Well, since we don't have the [Tagblatt](2010040.md), I frankly admit complete [Ignorance](600186.md) about the *real* [Facts](600181.md) behind this [Decision](60095.md) and my [Provocation](600078.md) of the (almost for sure) not *responsible* [Person](40000001.md) was just a simple [Trick](600187.md) for getting more [Publicity](60175.md), like also [Master-Palmer](70000069.md) himself demonstrates it from Time to Time.
 
