--- a/2010042.md
+++ b/2010042.md
@@ -1,3 +1,3 @@
 # P_NUTZ-TATTOO
 
-P_NUTZ-TATTOO is a [Tatoo-Studio](404.md) at [Tabak-Schrade](2010041.md).
+P_NUTZ-TATTOO is a [Tatoo-Studio](200020006.md) at [Tabak-Schrade](2010041.md).
