--- a/2010041.md
+++ b/2010041.md
@@ -1,3 +1,7 @@
 # Tabak-Schrade
 
 Tabak-Schrade is a Shop for [Tabacco-Products](100100008.md) in [Tübingen](2000001.md).
+
+## Pictures
+
+![Shop-Window](400000170.jpg)
