--- a/600197.md
+++ b/600197.md
@@ -1,3 +1,3 @@
 # Guest
 
-A Guest is a [Accupant](404.md) for a [Time](10000002.md).
+A Guest is a [Fellow-Accupant](180000015.md) for [Time](10000002.md).
