--- a/21.md
+++ b/21.md
@@ -69,6 +69,21 @@
 
 ## Day-117: MPA-Final <a id="17000"/>
 
+#### Blog-Chain-Time 2023.11.04-16:42 in Tübingen <a id="17003"/>
+###### Topics: Politics, Germany, Europe
+
+Because of my [Suspicion](670033.md), that Someone has not thought carefully, when hissing only two [Flags](141000009.md) in front of [Our-Landrats-Amt](140100002.md), I write a short [E-Mail](9000139.md) to the (probably) *responsible* [Land-Kreis-Tübingen](140100004.md)&nbsp;-&nbsp;Though this [Idea](600012.md) was not completely grown on my own [Dung](404.md), I liked it so much, that I am happy to stick my [Neck](40000043.md) out for it now:
+
+![That's Good!!](400000172.png)
+
+The [Bureaucracy](250010005.md) in [Germany](140000025.md) might be much more *reliable* than our proud [German-Federal-Railroad](8009999.md), but (with all Respect) it is not especially famous for its *fast* Response-Times&nbsp;-&nbsp;So i was all the more surprised to see already shortly later the [European-Flag](141000014.md) proudly flying in front of [Our-Landrats-Amt](140100002.md):
+
+![That's Tübingen!](444444446.jpg)
+
+So dear [Guest](600197.md), you see that not all is bad in [My-Birth-Country](140000025.md), but if you *really* want to stay here as *real* a [Resident](600198.md), the [Acceptance](60178.md) of some hard [Facts](<600181.md) seems to be *really* required:
+
+![That's Germany!](444444447.jpg)
+
 #### Blog-Chain-Time 2023.11.02-14:00 at the Landrats-Amt  <a id="17002"/>
 ###### Topics: MPA, Politics, War, Peace, Women
 
