--- a/21.md
+++ b/21.md
@@ -76,7 +76,7 @@ Because of my [Suspicion](670033.md), that Someone has not thought carefully, wh
 
 ![That's Good!!](400000172.png)
 
-The [Bureaucracy](250010005.md) in [Germany](140000025.md) might be much more *reliable* than our proud [German-Federal-Railroad](8009999.md), but (with all Respect) it is not especially famous for its *fast* Response-Times&nbsp;-&nbsp;So i was all the more surprised to see already shortly later the [European-Flag](141000014.md) proudly flying in front of [Our-Landrats-Amt](140100002.md):
+The [Bureaucracy](250010005.md) in [Germany](140000025.md) might be much more *reliable* than our proud [German-Federal-Railroad](8009999.md), but (with all Respect) it is not especially famous for its *fast* Response-Times&nbsp;-&nbsp;So I was all the more surprised to see already shortly later the [European-Flag](141000014.md) proudly flying in front of [Our-Landrats-Amt](140100002.md):
 
 ![That's Tübingen!](444444446.jpg)
 
