--- a/21.md
+++ b/21.md
@@ -80,7 +80,7 @@ The [Bureaucracy](250010005.md) in [Germany](140000025.md) might be more *reliab
 
 ![Miracle in Tübingen!](444444446.jpg)
 
-At least that could be one more [Argument](600151.md) for [Love](10000114.md) to [Our-Pretty-Town](2000001.md) and by the Way, besides all [Problems](600029.md) in [My-Birth-Country](140000025.md), I have also seen Good-Things:
+At least that could be one more [Argument](600151.md) for [Love](10000114.md) to [Our-Pretty-Town](2000001.md) and by the Way, besides all [Problems](600029.md) in [My-Birth-Country](140000025.md), I have also seen some Good-Things:
 
 ![Also in Germany!](444444447.jpg)
 
