--- a/21.md
+++ b/21.md
@@ -86,7 +86,7 @@ At least that could be one more [Argument](600151.md) for [Love](10000114.md) to
 
 Though the [Question](600107.md) remains, if the other [Countries](140000020.md) are *really* better, one Thing is for sure&nbsp;-&nbsp;The [Weather](30100002.md) in [Germany](140000025.md) is definitely *not* [The-Best](60151.md):
 
-![Rain in Derendingen!](400000173.jpg)
+![Damp in Derendingen!](400000173.jpg)
 
 #### Blog-Chain-Time 2023.11.02-14:00 at the Landrats-Amt  <a id="17002"/>
 ###### Topics: MPA, Politics, War, Peace, Women
