--- a/21.md
+++ b/21.md
@@ -84,7 +84,7 @@ At least that could be one more [Argument](600151.md) for [Love](10000114.md) to
 
 ![Also in Germany!](444444447.jpg)
 
-Though the [Question](600107.md) remains, if the other [Countries](140000020.md) are *really* better, one Thing is for sure&nbsp;-&nbsp;The [Weather](30100002.md) in [Germany](140000025.md) is definitely *not* [The-Best](60151.md):
+Though the [Question](600107.md) remains, if the other [Countries](140000020.md) are *really* better here, one Thing is for sure&nbsp;-&nbsp;The [Weather](30100002.md) in [Germany](140000025.md) is definitely *not* [The-Best](60151.md):
 
 ![Damp in Derendingen!](400000173.jpg)
 
