--- a/21.md
+++ b/21.md
@@ -72,7 +72,7 @@
 #### Blog-Chain-Time 2023.11.04-16:42 in Tübingen <a id="17003"/>
 ###### Topics: Politics, Germany, Europe
 
-Because of my [Suspicion](670033.md), that Someone has not thought carefully, when hissing only two [Flags](141000009.md) in front of [Our-Landrats-Amt](140100002.md), I write a short [E-Mail](9000139.md) to the (probably) *responsible* [Land-Kreis-Tübingen](140100004.md)&nbsp;-&nbsp;Though this [Idea](600012.md) was not completely grown on my own [Dung](404.md), I am still happy to stick my [Neck](40000043.md) out for it now:
+Because of my [My-Outsider-Hypothesis](#17002) and the [Suspicion](670033.md), that Someone just has not thought carefully, when hissing only two [Flags](141000009.md) in front of [Our-Landrats-Amt](140100002.md), I write a short [E-Mail](9000139.md) to the (probably) *responsible* [Land-Kreis-Tübingen](140100004.md)&nbsp;-&nbsp;Though this [Idea](600012.md) was not completely grown on my own [Dung](404.md), I am still happy to stick my [Neck](40000043.md) out for it now:
 
 ![Good Idea!](400000172.png)
 
