--- a/21.md
+++ b/21.md
@@ -82,7 +82,7 @@ The [Bureaucracy](250010005.md) in [Germany](140000025.md) might be more *reliab
 
 At least that could be one more [Argument](600151.md) for [Love](10000114.md) to [Our-Pretty-Town](2000001.md) and by the Way, besides all [Problems](600029.md) in [My-Birth-Country](140000025.md), I have also seen some Good-Things:
 
-![Also in Germany!](444444447.jpg)
+![Still in Germany!](444444447.jpg)
 
 Though the [Question](600107.md) remains, if the other [Countries](140000020.md) are *really* better here, one Thing is for sure&nbsp;-&nbsp;The [Weather](30100002.md) in [Germany](140000025.md) is definitely *not* [The-Best](60151.md):
 
