--- a/21.md
+++ b/21.md
@@ -260,7 +260,7 @@ Though out my Conviction that big is not always better, fortunately my [Machine]
 
 ![Big Thing](400000146.jpg)
 
-Because Everybody wants to give the very Last for the Farewell-[Show](60010003.md), our (especially high:) [Voices](60096.md) are brought up to the [Limit](600026.md), and therefore this Time we really have to use some Aids:
+Everybody wants to give the very Last for the Farewell-[Show](60010003.md) and our (especially high:) [Voices](60096.md) are brought up to the [Limit](600026.md)&nbsp;-&nbsp;Therefore this Time we really have to use some Aids:
 
 ![Voice Doping](400000145.jpg)
 
