Make it more precise

--- a/21.md
+++ b/21.md
@@ -237,7 +237,7 @@ Average for Men  : 1.0
 
 I think Everybody agrees that we now answered by Means of [Mathematics](13000000.md) and [Informatics](9000000.md) the simple [Binary-Question](600138.md):
 
-> Have Men and Women the same Amount of Fun-Contacts?
+> Have Men and Women on Average the same Amount of Fun-Contacts?
 
 And the simple [Answer](600139.md) is:
 
