--- a/21.md
+++ b/21.md
@@ -338,7 +338,7 @@ First we drive to the Practice-Area near the beautiful [Recycling-Center](110300
 
 ![Young Dussel](400000098.jpg)
 
-Oh Boy, it's high Time to grow up, really! But back to me: To make it not too obvious for my old Hares, I regularily switch between Wild-Boar- and Pussy-Style, so maximum (loud) [Accelerations](10000115.md) are followed by really broad (slow) [U-Turns](1100000009.md).
+Oh Boy, it's high Time to grow up, really! But back to me&nbsp;-&nbsp;To make it not too obvious for my old Hares, I regularily switch between Wild-Boar- and Pussy-Style, so maximum (loud) [Accelerations](10000115.md) are followed by really broad (slow) [U-Turns](1100000009.md).
 
 Then I have to do the Excercises, of which the most dangerous One is called by our [Brave-Viking](150000005.md) simply My-[Kyrptonite](750001.md). Suddenly it looks like the two Traffic-Experts now somehow smelled the Rat and therefore try to test me more accurately.
 
@@ -350,7 +350,7 @@ Then on my Right I recognize a dumb [Foreigner](600148.md), who obviously does n
 
 ![Disabled Dussel](400000102.jpg)
 
-Come on Boy, your [Brain](40000026.md) isn't disabled, high Time to get more fucused, really! But back to me: So far Everything worked according to my [Plan](600045.md), but as we say in good old [German](600004.md):
+Come on Boy, your [Brain](40000026.md) isn't disabled, high Time to get more fucused, really! But back to me&nbsp;-&nbsp;So far Everything worked according to my [Plan](600045.md), but as we say in good old [German](600004.md):
 
 > The Devil is known to be a Squirrel [[2]](#12052).
 
