Improve Text-Layout

--- a/21.md
+++ b/21.md
@@ -368,7 +368,7 @@ Fortunately my Tester generously forgives my [Speeding-Misdemeanor](670030.md), 
 
 Bad-Luck for me, because I do not check the [Right-for-Left-Rule](1100000007.md) properly and therefore the rutinated Tester has no other Choice than to make me fail the Driving-Test.
 
-Oh Man, obviously this Time I really took it too far and the old Dream of passing every single [Test](60138.md) in one [Life](60064.md) is History now. Perhaps I should think about a little bit more [Discipline](41000004.md) in the Future.
+Oh Man, obviously this Time I really took it too far and the old Dream of passing every single [Test](60138.md) in one [Life](60064.md) is History now&nbsp;-&nbsp;Perhaps I should think about a little bit more [Discipline](41000004.md) in the Future.
 
 Unlike my [Driver-Test-Friend](1000001017.md), I never joined the [Bundeswehr](1200000002.md) and therefore I am still a bit uncertain in the Field, but I will try my very Best, promised:
 
